src/styles.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@font-face {
  font-family: 'Inter';
  font-weight: 100 900;
  font-display: swap;
  font-style: normal;
  font-named-instance: 'Regular';
  src: url(/fonts/Inter.woff2) format('woff2');
}

:root {
  --font-sans: 'Inter';
}

@layer base {
  body {
    @apply h-dvh overflow-hidden font-sans antialiased;
    -webkit-tap-highlight-color: transparent;
  }
}

